# LaneDetection

./: CMakeLists.txt  main.c
.github/workflows/: cmake-multi-platform.yml
